tests/fixtures/sample-js-project-positive/shared/utils/src/errors/uncaught-1714d853.ts
export function failing_1714d853(): never {
  throw new Error("ouch-1714d853");
}
